--- a/src/compents/slider/slider-style.css
+++ b/src/compents/slider/slider-style.css
@@ -2,6 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background:  #f4b412;
+    width: 100%;
+    height: 100%;
 }
 
- 
+ #slide-image{
+    border-radius:'10px';
+    background: red;
+ }
