--- a/src/compents/header/header-style.css
+++ b/src/compents/header/header-style.css
@@ -1,37 +1,41 @@
-.header{
+.header {
     width: 100%;
     background: #23232d;
     height: auto;
 }
 
-.header-list{
+.header-list {
     color: #fcfcfc;
     display: flex;
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
-    display: flex;     
+    display: flex;
     position: absolute;
-    right:  25px;   
-    top: calc(60px - 1rem);  
+    right: 25px;
+    top: calc(60px - 1rem);
     flex-wrap: wrap;
 }
 
-.header-item{
+.header-item {
     margin: 0 13px;
+    padding: 4px;
 }
 
-.header-item:hover{
-    text-decoration: underline; 
+.header-item:hover {
+
+    background: #f4b412;
     cursor: pointer;
+    border-radius: 5px;
+    transition: 0.3s;
 }
 
-.header-logo{
+.header-logo {
     height: 100px;
     display: flex;
-    padding: 5px;     
+    padding: 5px;
 }
 
-a{
+a {
     text-decoration: none;
     color: #fcfcfc;
 }
