--- a/src/compents/benefits/benefits-styles.css
+++ b/src/compents/benefits/benefits-styles.css
@@ -1,5 +1,11 @@
+h2 {
+    font-size: 30px;
+    margin: 0 50px -20px 50px;
+    text-transform: uppercase;
+}
+
 #benefits {
-    margin: 30px 50px;
+    margin: 40px 50px;
     border-bottom: 2px solid #f0f0f0f0;
     border-top: 2px solid #f0f0f0f0;
     display: flex;
